--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.KamusIndonesiaJepang"
         tools:ignore="LockedOrientationActivity">
         <activity
+            android:name=".HiraganaActivity"
+            android:exported="false" />
+        <activity
             android:name=".SplashScreenActivity"
             android:exported="true"
             android:theme="@style/Theme.KamusIndonesiaJepang.NoActionBar">
@@ -35,7 +38,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.KamusIndonesiaJepang.NoActionBar"/>
+            android:theme="@style/Theme.KamusIndonesiaJepang.NoActionBar" />
 
         <meta-data
             android:name="preloaded_fonts"
