--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:theme="@style/Theme.KamusIndonesiaJepang"
         tools:ignore="LockedOrientationActivity">
         <activity
-            android:name=".activity.HiraganaActivity"
+            android:name=".activities.HiraganaActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.SplashScreenActivity"
+            android:name=".activities.SplashScreenActivity"
             android:exported="true"
             android:theme="@style/Theme.KamusIndonesiaJepang.NoActionBar">
             <intent-filter>
@@ -25,17 +25,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".JpnToIndActivity"
+            android:name=".activities.JpnToIndActivity"
             android:exported="false"
-            android:parentActivityName=".activity.MainActivity"
+            android:parentActivityName=".activities.MainActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".IndToJpnActivity"
+            android:name=".activities.IndToJpnActivity"
             android:exported="false"
-            android:parentActivityName=".activity.MainActivity"
+            android:parentActivityName=".activities.MainActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.KamusIndonesiaJepang.NoActionBar" />
