--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,12 @@
         <activity
             android:name=".activities.HiraganaActivity"
             android:parentActivityName=".activities.MainActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".activities.SplashScreenActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.KamusIndonesiaJepang.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
