--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,18 @@
         android:theme="@style/Theme.KamusIndonesiaJepang"
         tools:ignore="LockedOrientationActivity">
         <activity
+            android:name=".AboutActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.KatakanaActivity"
             android:exported="false"
             android:parentActivityName=".activities.HurufJepangActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.HurufJepangActivity"
             android:exported="false"
             android:parentActivityName=".activities.MainActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.HiraganaActivity"
             android:exported="false"
