--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:theme="@style/Theme.KamusIndonesiaJepang"
         tools:ignore="LockedOrientationActivity">
         <activity
-            android:name=".AboutActivity"
-            android:exported="false" />
+            android:name=".activities.AboutActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.MainActivity"/>
         <activity
             android:name=".activities.KatakanaActivity"
             android:exported="false"
@@ -53,9 +54,7 @@
         <activity
             android:name=".activities.MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.KamusIndonesiaJepang.NoActionBar" />
-
+            android:screenOrientation="portrait" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
